# WoT-Replay-Manager

./: .gitignore  README.md  main.py  requirements.txt  test.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: tank_mapping.yml
.github/workflows/: build.yml
parser/: replay_parser.py
src/: CMakeLists.txt  jsondecoder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  replayextractor.h  replayextractor2.h  replayhelper.h  replayparser.cpp  replayparser.h  replayscanner.cpp  replayscanner.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  tank_mapping.json
src/wot_parser_lib/: Cargo.toml
src/wot_parser_lib/src/: lib.rs
utils/: __init__.py
